[package]
name = "async-runtime"
version = "0.1.0"
edition = "2024"
authors = ["abh1nav10"]
license = "MIT OR Apache-2.0"

[dependencies]
flume = "0.12"
mio = { version = "1.1.1", features = ["os-poll", "net"] }
rand = "0.10"
futures-util = { version = "0.3.32", features = ["io"] }
hyper = "1.8"

[dev-dependencies]
hyper = { version = "1.8", features = ["server", "client", "http2"] }
http-body-util = "0.1.3"
