[package]
name = "async-runtime"
version = "0.1.0"
edition = "2024"
authors = ["abh1nav10"]
license = "MIT OR Apache-2.0"

[dependencies]
flume = "0.12"
mio = { version = "1.1.1", features = ["os-poll", "net"] }
rand = "0.10"
futures-util = { version = "0.3.32", features = ["io"] }
hyper = "1.8"

[dev-dependencies]
# http2 feature for hyper_test and http1 feature to run the hyper http servers with tokio and our
# runtime and benchmark it with `wrk`
hyper = { version = "1.8", features = ["server", "client", "http1", "http2"] }
http-body-util = "0.1.3"
tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "net"] }
# hyper-util to get TokioIo for the tokio backed hyper http-server that we are benchmarking against with 
# runtime backed server
hyper-util = { version = "0.1.2", features = ["tokio"] }
